# VesperEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  outlog.md
Engine/: CMakeLists.txt
Engine/configs/deployment/: VesperEditor.ini
Engine/configs/development/: VesperEditor.ini
Engine/shader/: CMakeLists.txt
Engine/shader/slang/: minimal.slang  model.slang
Engine/shader/slang/include/: common.slang
Engine/source/editor/: CMakeLists.txt
Engine/source/editor/include/: editor.h
Engine/source/editor/source/: editor.cpp  main.cpp
Engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
Engine/source/runtime/core/base/: hash.h  macro.h
Engine/source/runtime/core/event/: event.h  event_bus.cpp  event_bus.h  event_types.h
Engine/source/runtime/core/log/: log_system.cpp  log_system.h
Engine/source/runtime/core/math/: math.h  math_types.h  matrix4x4.h  quaternion.h  vector2.h  vector3.h  vector4.h
Engine/source/runtime/core/threading/: mpsc_queue.h  spsc_queue.h  task.h  threading.h  wait_group.h  work_stealing_deque.h  worker_pool.cpp  worker_pool.h
Engine/source/runtime/function/framework/component/camera/: camera_component.h
Engine/source/runtime/function/framework/component/common/: bounding_component.h
Engine/source/runtime/function/framework/component/mesh/: renderable_component.h
Engine/source/runtime/function/framework/component/transform/: transform_component.h
Engine/source/runtime/function/framework/ecs/: ecs_types.h  world.cpp  world.h
Engine/source/runtime/function/framework/ecs/systems/: frustum.cpp  frustum.h  frustum_cull_system.cpp  frustum_cull_system.h  render_bridge_system.cpp  render_bridge_system.h
Engine/source/runtime/function/framework/scene/: scene.cpp  scene.h
Engine/source/runtime/function/global/: global_context.cpp  global_context.h
Engine/source/runtime/function/physics/: physics_manager.cpp  physics_manager.h  physics_scene.cpp  physics_scene.h
Engine/source/runtime/function/render/: camera.cpp  camera.h  deferred_deletion.cpp  deferred_deletion.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_primitives.cpp  mesh_primitives.h  model.cpp  model.h  model_loader.cpp  model_loader.h  render_packet.cpp  render_packet.h  render_swap_context.h  render_system.cpp  render_system.h  shader_reflector.cpp  shader_reflector.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
Engine/source/runtime/function/render/backend/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_types.cpp  vulkan_types.h
Engine/source/runtime/function/render/rhi/: rhi.cpp  rhi.h  rhi_types.h
Engine/source/runtime/function/window/: window_system.cpp  window_system.h
Engine/source/runtime/platform/input/: input_system.cpp  input_system.h
Engine/source/runtime/resource/asset/: asset_manager.cpp  asset_manager.h
Engine/source/runtime/resource/config/: config_manager.cpp  config_manager.h
Engine/source/runtime/resource/core/: asset_id.h
cmake/: ShaderCompile.cmake  VesperUtils.cmake
tests/: CMakeLists.txt  test_engine.cpp  test_input_system.cpp  test_log_system.cpp  test_main.cpp  test_math_matrix.cpp  test_math_quaternion.cpp  test_math_vector.cpp  test_window_system.cpp
